Update codeslides font sizes

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React Spectacle Boilerplate</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/prismjs@1.10.0/themes/prism-okaidia.css">
   </head>
   <body>
     <noscript>
