Add multiple slides

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <title>React Spectacle Boilerplate</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/prismjs@1.10.0/themes/prism-okaidia.css">
+    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
   </head>
   <body>
     <noscript>
